--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.broadleafcommerce</groupId>
     <artifactId>broadleaf-third-party-integration-config</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>BroadleafCommerce Third Party Integration Configuration</name>
     <version>1.6.0-SNAPSHOT</version>
     <description>BroadleafCommerce Third Party Integration Modules Configuration</description>
@@ -65,6 +65,19 @@
                     <groupId>org.zeroturnaround</groupId>
                     <artifactId>javarebel-maven-plugin</artifactId>
                     <version>1.0.5</version>
+                    <executions>
+                        <execution>
+                            <id>generate-rebel-xml</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <relativePath>../</relativePath>
+                        <rootPath>$${rebel.root}</rootPath>
+                    </configuration>
                 </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                 <plugin>
