--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>broadleaf-third-party-integration-config</artifactId>
     <packaging>jar</packaging>
     <name>BroadleafCommerce Third Party Integration Configuration</name>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     <description>BroadleafCommerce Third Party Integration Modules Configuration</description>
     <url>http://www.broadleafcommerce.org</url>
     <licenses>
