--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,7 @@
 		</artifact:mvn>
 	</target>
 
-    <target name="jetty-demo-jrebel">
+    <target name="jetty-demo-jrebel" depends="start-db">
 		<delete dir="war/WEB-INF/lib"/>
 		<artifact:mvn mavenHome="${maven.home}" fork="true" jvmargs="-DbroadleafCoreDirectory=${broadleafCoreDirectory} -DbroadleafWorkspaceDirectory=${broadleafWorkspaceDirectory} -Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=n -XX:MaxPermSize=256M -Xmx512M -Drebel.root=${broadleafWorkspaceDirectory} -Dlogs.dir=${logs.dir} -noverify -javaagent:${jrebel.path}">
 			<arg value="compile"/>
