--- a/src/main/resources/runtime-properties/development.properties
+++ b/src/main/resources/runtime-properties/development.properties
@@ -7,7 +7,8 @@ asset.server.url.prefix.internal=cmsstatic
 # above will be replaced with the string below.   This is useful for sites
 # that have a separate image domain or use a CDN to render images.   This works well
 # with CMS's that own the image part of your domain CNAME
-asset.server.url.prefix=http://localhost:8080/cmsstatic
+#asset.server.url.prefix=http://localhost:8080/cmsstatic
+asset.server.url.prefix=
 
 # If left blank, the system will use the non secure url and replace the http with
 # https.
