adding examples to the demo of extending the RESTful wrappers

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,7 @@
             /WEB-INF/applicationContext-email.xml
             /WEB-INF/applicationContext-search.xml
             /WEB-INF/applicationContext-security.xml
+            /WEB-INF/applicationContext-demo-api-wrapper.xml
         </param-value>
 	</context-param>
 
