--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,15 @@
         </init-param>
     </filter>
     
+    <filter>
+        <filter-name>currencyDeterminationFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>currencyDeterminationFilter</param-value>
+        </init-param>
+    </filter>
+    
 
     <filter-mapping>
         <filter-name>blPrecompressedArtifactFilter</filter-name>
