--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -153,7 +153,14 @@
             com.sun.jersey.spi.spring.container.servlet.SpringServlet
         </servlet-class>
     </servlet>
-
+<servlet>
+    <servlet-name>remoteLogging</servlet-name>
+        <servlet-class>org.broadleafcommerce.common.logging.Log4JRemoteGwtLoggingServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>remoteLogging</servlet-name>
+        <url-pattern>/org.broadleafcommerce.admin.demoAdmin/remote_logging</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/api/*</url-pattern>
